image link check

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="max-w-6xl mx-auto p-4">
         <section class="items-center sm:flex sm:flex-row-reverse gap-5 mb-28">
             <!-- fresh flower  -->  
-             <img src="/assets/hero-flower.png" class="mb-7" alt="">           
+             <img src="assets/hero-flower.png" class="mb-7" alt="">           
              <div>
                 <h2 class="font-[Noto-Serif] text-2xl md:text-5xl font-bold">Always 
                 <span class="text-[#E95A08] ">Fresh <br> Flower</span></h2>
@@ -46,7 +46,7 @@
          <section class="grid grid-cols-2 md:grid-cols-4 gap-5 mb-28">
            <!-- card  -->
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -54,7 +54,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -62,7 +62,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -70,7 +70,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
