image are not showing

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
                 </div>
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
+            <!-- last 4 card and next image are not working. i don't know why? -->
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -86,7 +87,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -94,7 +95,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -102,7 +103,7 @@
                 <button class="bg-[#E95A08] w-full py-4 text-white">ADD TO CART</button>
             </div>
             <div class="sm:w-[270px] text-center">
-                <img src="/assets/sample-flower-image.png" alt="">
+                <img src="assets/sample-flower-image.png" alt="">
                 <div class="my-7">
                     <h5 class="text-2xl">Lily Blossom</h5>
                     <p class="text-2xl font-bold">20 USD</p>
@@ -114,9 +115,9 @@
 
          <section class="sm:flex gap-16 items-center h-full md:h-[600px] mb-28">
             <div class="w-full relative">
-                <img src="/assets/flower-store.png" alt="">
+                <img src="assets/flower-store.png" alt="">
                 <div class="h-[286px] w-[286px] absolute top-[-130px] right-[-130px] invisible sm:visible">
-                    <img src="/assets/trusted-badge.png" alt="">
+                    <img src="assets/trusted-badge.png" alt="">
                 </div>
             </div>
             <div class="">
@@ -138,7 +139,7 @@
     </main>
     <!-- login  -->
      <section class="mb-28" >
-        <div style="background-image: url(/assets/news-letter-bg.png);" 
+        <div style="background-image: url(assets/news-letter-bg.png);" 
         class="h-[530px] w-full flex justify-center items-center text-white">
         <div class="w-[350px] md:w-[830px] mx-auto text-center">
             <h3 class="font-[Noto-Serif] text-2xl md:text-5xl font-bold">Join the colorful Bunch</h3>
@@ -152,7 +153,7 @@
      </section>
     <footer class="grid grid-cols-1 md:grid-cols-4 gap-8 max-w-6xl mx-auto p-4 "> 
         <div class="max-w-[400px]">
-            <img src="/assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="">
             <p class="font-[inter] text-xl text-neutral-600 mt-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
         </div>
         <div>
@@ -175,10 +176,10 @@
         </div>
         <div>
             <ul class="flex gap-10">
-                <li><a href=""><img src="/assets/icon-linkedin.png" alt=""></a></li>
-                <li><a href=""><img src="/assets/icon-twitter.png" alt=""></a></li>
-                <li><a href=""><img src="/assets/icon-facebook.png" alt=""></a></li>
-                <li><a href=""><img src="/assets/icon-youtube.png" alt=""></a></li>
+                <li><a href=""><img src="assets/icon-linkedin.png" alt=""></a></li>
+                <li><a href=""><img src="assets/icon-twitter.png" alt=""></a></li>
+                <li><a href=""><img src="assets/icon-facebook.png" alt=""></a></li>
+                <li><a href=""><img src="assets/icon-youtube.png" alt=""></a></li>
                
             </ul>
         </div>
