added bonus section and final responsive

--- a/index.html
+++ b/index.html
@@ -137,30 +137,40 @@
           <h4 class="font-[Noto-Serif] text-2xl md:text-5xl font-bold"><span class="text-[#E95A08]">Latest </span>Deals</h4>
           <p class="font-[inter] text-xl text-neutral-600 mt-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         </div> 
-        <section class="mb-28 gap-8 max-w-6xl mx-auto p-4 grid grid-cols-2">
-            <div style="background-image: url(assets/deal-bloom.png);"
-            class="bg-no-repeat h-[200px] w-[360px] flex items-center text-white">
-                <div class="m-9 text-center">
-                    <h5 class="text-2xl font-bold">60% Off | Bloom Plant</h5>
-                    <button class="font-bold">Shop Now</button>
-                </div>
-            </div>
-            <div style="background-image: url(assets/deal-zabo.png);"
-            class="bg-no-repeat w-[755px] h-[425px] flex items-center text-white">
-                <div class="m-9 text-center">
-                    <h5 class="text-2xl font-bold">60% Off | Bloom Plant</h5>
-                    <button class="font-bold">Shop Now</button>
-                </div>
-            </div>
-            <div style="background-image: url(assets/deal-ana.png);"
-            class="bg-no-repeat h-[200px] w-[360px] flex items-center text-white">
-                <div class="m-9 text-center">
-                    <h5 class="text-2xl font-bold">60% Off | Bloom Plant</h5>
-                    <button class="font-bold">Shop Now</button>
-                </div>
-            </div>
-        </section>
         
+        <div>
+        <div class="flex flex-col lg:flex-row gap-4 p-4 min-h-screen">
+            <div class="flex flex-col gap-4 w-full lg:w-1/3">             
+                <div
+                style="background-image: url(assets/deal-bloom.png);"
+                class="bg-cover bg-center rounded-xl h-60 flex items-center justify-center text-white text-center"
+                >
+                <div>
+                    <h2 class="text-xl font-semibold">60% Off | Bloom Plant</h2>
+                    <p class="underline mt-2 cursor-pointer">Shop Now</p>
+                </div>
+                </div>             
+                <div style="background-image: url(assets/deal-ana.png);"
+                class="bg-cover bg-center rounded-xl h-60 flex items-center justify-center text-white text-center"
+                >
+                <div>
+                    <h2 class="text-xl font-semibold">30% Off | Ana Plant</h2>
+                    <p class="underline mt-2 cursor-pointer">Shop Now</p>
+                </div>
+                </div>
+            </div>
+          
+            <div style="background-image: url(assets/deal-zabo.png);"
+                class="bg-cover bg-center rounded-xl h-[500px] w-full lg:w-2/3 flex items-center justify-center text-white text-center"
+            >
+                <div>
+                <h2 class="text-3xl font-bold">25% Off | Zabo Plant</h2>
+                <p class="underline mt-4 cursor-pointer text-lg">Shop Now</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </main>
     <!-- login  -->
      <section class="mb-28 " >
